non-ssr app hooked up and ready to build out

--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Test Index Serve</title>
+  <title>Buy Trade Ins</title>
 </head>
 <body>
 
 <h1 id="headline">testing serving an index.html file</h1>
-
-
-<!-- add a .js script. if it loads, react apps will work too -->
-
-
 <script src="testScript.js"></script>
+
+<div id="reactTarget"></div>
+
+
 </body>
 </html>
